@@ -104,6 +104,7 @@ Version 1.5.7beta05 [November 21, 2011]
   Validate time settings passed to pngset() and png_convert_to_rfc1123()
     (Frank Busse).
   Allow row_stride==0 to indicate default stride in simplified API
+  Added MINGW support to CMakeLists.txt
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net:
 (subscription required; visit
